--- a/mypage.html
+++ b/mypage.html
@@ -7,7 +7,7 @@
     <link rel= "stylesheet" type="text/css" href="css/mystyles.css"/>
 </head>
 <body>
-        <a href="../index.html">Home Page</a>
+        <a href="index.html">Home Page</a>
     <h1 id = "top">Washington D.C.</h1>
     <h2 id="middle">Sights to See</h2>
     <ol id="middle"> 
